src/main/java/parser/jj/NameParser.java
/* NameParser.java */
/* Generated By:JavaCC: Do not edit this line. NameParser.java */
package parser.jj;

import com.google.common.collect.Lists;
import parser.Name;
import parser.NameResult;

import java.io.ByteArrayInputStream;
import java.io.StringReader;
import java.util.List;


public class NameParser implements NameParserConstants {

    NameResult names;

    public NameParser() {
        this(new ByteArrayInputStream("".getBytes()));
    }

// TODO : refactor this splitting crap code.   use another .jj file?
    public NameResult parseNames(String text) {
        List<String> split = split(text);
        names = new NameResult();
        for (String name:split) {
            try {
               System.out.println("parsing : " + name);
               names.push(new Name());
               parseName(name);
            } catch (ParseException e) {
                e.printStackTrace();
                return new NameResult().error(text);
            }

        }
        names.collate();
        return names;
    }

    private List<String> split(String text) {
        List<String> result = Lists.newArrayList(text);
        result = split(result,"and");
        result = split(result, "[+]");
        result = split(result,"&");
        result = split(result,"'n");
        result = split(result,";",false);
        if (result.size()>1) System.out.println("breaking down names " + text + " --> " + result);
        return result;
    }

    private List<String> split(List<String> names, String regex, boolean whitespace) {
        if (whitespace) regex = "\u005c\u005cs+"+regex+"\u005c\u005cs+";
        List<String> result = Lists.newArrayList();
        for (String name:names) {
            result.addAll(Lists.newArrayList(name.split(regex)));
        }
        return result;
    }

    private List<String> split(List<String> names, String regex) {
        return split(names, regex, true);
    }


    private void parseName(String text) throws ParseException, TokenMgrError {
        text = text.trim();
        ReInit(new StringReader(text));
        _$$parse();
    }

    private void init() {

        names.push(new Name());
    }

    public Name getName() {
        return names.peek();
    }

    public Name getCompanyName() {
        return getName().asCompany();
    }

  final public void end() throws ParseException {
    jj_consume_token(0);
names.peek().endParse();
  }

  final public void _$$parse() throws ParseException {
    if (jj_2_1(2147483647)) {
      lastName();
      jj_consume_token(COMMA);
      longName();
      end();
    } else if (jj_2_2(4)) {
      longName();
      end();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void lastName() throws ParseException {getName().setInverse(true);
    if (jj_2_4(2147483647)) {
      namePrefix();
      if (jj_2_3(4)) {
        nameRoot();
      } else {
        ;
      }
    } else if (jj_2_5(4)) {
      nameRoot();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void longName() throws ParseException {
    if (jj_2_17(2147483647)) {
      salutation();
      if (jj_2_11(4)) {
        label_1:
        while (true) {
          name();
          if (jj_2_6(4)) {
            ;
          } else {
            break label_1;
          }
        }
        if (jj_2_7(4)) {
          relation();
        } else {
          ;
        }
        if (jj_2_8(4)) {
          jj_consume_token(COMMA);
        } else {
          ;
        }
        label_2:
        while (true) {
          if (jj_2_9(4)) {
            ;
          } else {
            break label_2;
          }
          title();
          if (jj_2_10(4)) {
            jj_consume_token(COMMA);
          } else {
            ;
          }
        }
      } else {
        ;
      }
    } else if (jj_2_18(4)) {
      label_3:
      while (true) {
        name();
        if (jj_2_12(4)) {
          ;
        } else {
          break label_3;
        }
      }
      if (jj_2_13(4)) {
        relation();
      } else {
        ;
      }
      if (jj_2_14(4)) {
        jj_consume_token(COMMA);
      } else {
        ;
      }
      label_4:
      while (true) {
        if (jj_2_15(4)) {
          ;
        } else {
          break label_4;
        }
        title();
        if (jj_2_16(4)) {
          jj_consume_token(COMMA);
        } else {
          ;
        }
      }
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void restOfName() throws ParseException {
    label_5:
    while (true) {
      name();
      if (jj_2_19(4)) {
        ;
      } else {
        break label_5;
      }
    }
    if (jj_2_20(4)) {
      relation();
    } else {
      ;
    }
    if (jj_2_21(4)) {
      jj_consume_token(COMMA);
    } else {
      ;
    }
    label_6:
    while (true) {
      if (jj_2_22(4)) {
        ;
      } else {
        break label_6;
      }
      title();
    }
  }

  final public void salutation() throws ParseException {
    if (jj_2_23(4)) {
      jj_consume_token(ESTATE_OF);
    } else if (jj_2_24(4)) {
      jj_consume_token(JUDGE);
    } else if (jj_2_25(4)) {
      jj_consume_token(HON);
    } else if (jj_2_26(4)) {
      jj_consume_token(MR);
    } else if (jj_2_27(4)) {
      jj_consume_token(MRS);
    } else if (jj_2_28(4)) {
      jj_consume_token(MISS);
    } else if (jj_2_29(4)) {
      jj_consume_token(MS);
    } else if (jj_2_30(4)) {
      jj_consume_token(SIR);
    } else if (jj_2_31(4)) {
      jj_consume_token(MADAM);
    } else if (jj_2_32(4)) {
      jj_consume_token(ATTY);
    } else if (jj_2_33(4)) {
      jj_consume_token(DOCTOR);
    } else if (jj_2_34(4)) {
      jj_consume_token(PROF);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
getName().addSalutation(token.image, token.kind);
  }

  final public void relation() throws ParseException {
    if (jj_2_35(4)) {
      jj_consume_token(SECOND);
    } else if (jj_2_36(4)) {
      jj_consume_token(THIRD);
    } else if (jj_2_37(4)) {
      jj_consume_token(FOURTH);
    } else if (jj_2_38(4)) {
      jj_consume_token(SENIOR);
    } else if (jj_2_39(4)) {
      jj_consume_token(JUNIOR);
    } else if (jj_2_40(4)) {
      jj_consume_token(ROMAN_NUMERALS);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
getName().addRelation(token.image, token.kind);
  }

  final public void title() throws ParseException {
    if (jj_2_41(4)) {
      companyTitle();
    } else if (jj_2_42(4)) {
      personalTitle();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void companyTitle() throws ParseException {
    if (jj_2_43(4)) {
      jj_consume_token(INC);
    } else if (jj_2_44(4)) {
      jj_consume_token(CO);
    } else if (jj_2_45(4)) {
      jj_consume_token(LTD);
    } else if (jj_2_46(4)) {
      jj_consume_token(TM);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
getCompanyName().addTitle(token.image, token.kind);
  }

  final public void personalTitle() throws ParseException {
    if (jj_2_47(4)) {
      jj_consume_token(LLB);
    } else if (jj_2_48(4)) {
      jj_consume_token(DDS);
    } else if (jj_2_49(4)) {
      jj_consume_token(DMD);
    } else if (jj_2_50(4)) {
      jj_consume_token(ESQ);
    } else if (jj_2_51(4)) {
      jj_consume_token(JD);
    } else if (jj_2_52(4)) {
      jj_consume_token(BSC);
    } else if (jj_2_53(4)) {
      jj_consume_token(PHD);
    } else if (jj_2_54(4)) {
      jj_consume_token(BBA);
    } else if (jj_2_55(4)) {
      jj_consume_token(MBA);
    } else if (jj_2_56(4)) {
      jj_consume_token(MD);
    } else if (jj_2_57(4)) {
      jj_consume_token(CP);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
getName().addTitle(token.image, token.kind);
  }

  final public void name() throws ParseException {
    if (jj_2_59(2147483647)) {
      namePrefix();
      if (jj_2_58(4)) {
        nameRoot();
      } else {
        ;
      }
    } else if (jj_2_60(4)) {
      nickName();
    } else if (jj_2_61(4)) {
      nameRoot();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void nameRoot() throws ParseException {
    jj_consume_token(NAME_WITH_NUMBERS);
getName().addName(token.image, token.kind);
  }

  final public void namePrefix() throws ParseException {
    if (jj_2_62(4)) {
      jj_consume_token(BAR);
    } else if (jj_2_63(4)) {
      jj_consume_token(BEN);
    } else if (jj_2_64(4)) {
      jj_consume_token(BIN);
    } else if (jj_2_65(4)) {
      jj_consume_token(BINTI);
    } else if (jj_2_66(4)) {
      jj_consume_token(BINTE);
    } else if (jj_2_67(4)) {
      jj_consume_token(DA);
    } else if (jj_2_68(4)) {
      jj_consume_token(DAL);
    } else if (jj_2_69(4)) {
      jj_consume_token(DE);
    } else if (jj_2_70(4)) {
      jj_consume_token(DELA);
    } else if (jj_2_71(4)) {
      jj_consume_token(DE_LA);
    } else if (jj_2_72(4)) {
      jj_consume_token(DER);
    } else if (jj_2_73(4)) {
      jj_consume_token(DI);
    } else if (jj_2_74(4)) {
      jj_consume_token(IBN);
    } else if (jj_2_75(4)) {
      jj_consume_token(LA);
    } else if (jj_2_76(4)) {
      jj_consume_token(L_APOST);
    } else if (jj_2_77(4)) {
      jj_consume_token(LE);
    } else if (jj_2_78(4)) {
      jj_consume_token(MAC);
    } else if (jj_2_79(4)) {
      jj_consume_token(MC);
    } else if (jj_2_80(4)) {
      jj_consume_token(OH);
    } else if (jj_2_81(4)) {
      jj_consume_token(SAN);
    } else if (jj_2_82(4)) {
      jj_consume_token(ST);
    } else if (jj_2_83(4)) {
      jj_consume_token(STE);
    } else if (jj_2_84(4)) {
      jj_consume_token(VAN);
    } else if (jj_2_85(4)) {
      jj_consume_token(VEL);
    } else if (jj_2_86(4)) {
      jj_consume_token(VON);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
getName().addNameButPossiblyPrefix(token.image, token.kind);
  }

  final public void nickName() throws ParseException {
    if (jj_2_87(4)) {
      jj_consume_token(SINGLE_QUOTED_NICK_NAME);
    } else if (jj_2_88(4)) {
      jj_consume_token(QUOTED_NICK_NAME);
    } else if (jj_2_89(4)) {
      jj_consume_token(PAREN_NICK_NAME);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
getName().addNickName(token.image, token.kind);
  }

  final public void companyName() throws ParseException {
    jj_consume_token(NAME_WITH_NUMBERS);
getCompanyName().addName(token.image, token.kind);
  }

  private boolean jj_2_1(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  private boolean jj_2_3(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  private boolean jj_2_4(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  private boolean jj_2_5(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  private boolean jj_2_6(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  private boolean jj_2_7(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  private boolean jj_2_8(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  private boolean jj_2_9(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  private boolean jj_2_10(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_10(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  private boolean jj_2_11(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_11(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  private boolean jj_2_12(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_12(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  private boolean jj_2_13(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_13(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  private boolean jj_2_14(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_14(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  private boolean jj_2_15(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_15(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  private boolean jj_2_16(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_16(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(15, xla); }
  }

  private boolean jj_2_17(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_17(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(16, xla); }
  }

  private boolean jj_2_18(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_18(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(17, xla); }
  }

  private boolean jj_2_19(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_19(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(18, xla); }
  }

  private boolean jj_2_20(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_20(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(19, xla); }
  }

  private boolean jj_2_21(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_21(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(20, xla); }
  }

  private boolean jj_2_22(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_22(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(21, xla); }
  }

  private boolean jj_2_23(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_23(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(22, xla); }
  }

  private boolean jj_2_24(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_24(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(23, xla); }
  }

  private boolean jj_2_25(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_25(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(24, xla); }
  }

  private boolean jj_2_26(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_26(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(25, xla); }
  }

  private boolean jj_2_27(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_27(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(26, xla); }
  }

  private boolean jj_2_28(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_28(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(27, xla); }
  }

  private boolean jj_2_29(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_29(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(28, xla); }
  }

  private boolean jj_2_30(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_30(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(29, xla); }
  }

  private boolean jj_2_31(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_31(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(30, xla); }
  }

  private boolean jj_2_32(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_32(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(31, xla); }
  }

  private boolean jj_2_33(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_33(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(32, xla); }
  }

  private boolean jj_2_34(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_34(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(33, xla); }
  }

  private boolean jj_2_35(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_35(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(34, xla); }
  }

  private boolean jj_2_36(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_36(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(35, xla); }
  }

  private boolean jj_2_37(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_37(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(36, xla); }
  }

  private boolean jj_2_38(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_38(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(37, xla); }
  }

  private boolean jj_2_39(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_39(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(38, xla); }
  }

  private boolean jj_2_40(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_40(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(39, xla); }
  }

  private boolean jj_2_41(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_41(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(40, xla); }
  }

  private boolean jj_2_42(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_42(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(41, xla); }
  }

  private boolean jj_2_43(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_43(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(42, xla); }
  }

  private boolean jj_2_44(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_44(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(43, xla); }
  }

  private boolean jj_2_45(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_45(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(44, xla); }
  }

  private boolean jj_2_46(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_46(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(45, xla); }
  }

  private boolean jj_2_47(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_47(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(46, xla); }
  }

  private boolean jj_2_48(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_48(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(47, xla); }
  }

  private boolean jj_2_49(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_49(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(48, xla); }
  }

  private boolean jj_2_50(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_50(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(49, xla); }
  }

  private boolean jj_2_51(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_51(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(50, xla); }
  }

  private boolean jj_2_52(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_52(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(51, xla); }
  }

  private boolean jj_2_53(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_53(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(52, xla); }
  }

  private boolean jj_2_54(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_54(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(53, xla); }
  }

  private boolean jj_2_55(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_55(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(54, xla); }
  }

  private boolean jj_2_56(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_56(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(55, xla); }
  }

  private boolean jj_2_57(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_57(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(56, xla); }
  }

  private boolean jj_2_58(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_58(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(57, xla); }
  }

  private boolean jj_2_59(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_59(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(58, xla); }
  }

  private boolean jj_2_60(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_60(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(59, xla); }
  }

  private boolean jj_2_61(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_61(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(60, xla); }
  }
